--- a/build.gradle
+++ b/build.gradle
@@ -25,12 +25,13 @@ repositories {
 dependencies {
   compile gradleApi()
   compile localGroovy() //not needed for Java plugins
+  compile ("org.kamranzafar:jtar:2.3")
   // other dependencies that your plugin requires
 }
 
 // Unless overridden in the pluginBundle config DSL, the project version will
 // be used as your plugin version when publishing
-version = "0.2.15"
+version = "0.2.16"
 group = "net.karlmartens.dotnet"
 
 // The configuration example below shows the minimum required properties
