--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ apply plugin: "com.gradle.plugin-publish"
 // Apply other plugins here, e.g. java plugin for a plugin written in java or
 // the groovy plugin for a plugin written in groovy
 
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+
 // If your plugin has any external java dependencies, Gradle will attempt to
 // downloaded them from JCenter for anyone using the plugins DSL
 // so you should probably use JCenter for dependency resolution in your own
