--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ repositories {
 dependencies {
   compile gradleApi()
   compile localGroovy() //not needed for Java plugins
-  compile ("org.kamranzafar:jtar:2.3")
+  compile group: 'org.apache.commons', name: 'commons-compress', version: '1.18'
   // other dependencies that your plugin requires
 }
 
